@@ -18,7 +18,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)t..c	1.13 (gritter) 2/26/06
+ * Sccsid @(#)t..c	1.14 (gritter) 9/8/06
  */
 
 /* t..c : external declarations */
@@ -62,6 +62,7 @@ extern int decimalpoint;
 extern int linsize;
 extern int tab;
 extern int pr1403;
+extern int graphics;
 extern int linsize, delim1, delim2;
 extern int allflg;
 extern int textflg;
